Lookups for locations and titles

--- a/client/main.html
+++ b/client/main.html
@@ -1,10 +1,21 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Zaxan | Accounting </title>
+  <title>Zaxan Awesomely Friendly Accounting</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
+  <meta name="description" content="Zaxan is an awesomely friendly application that helps friends split bills and keep track of what they owe each other after outings, movies, parties and beer sessions. It can also be used by roommates to keep track of their regular expenses." />
+  <meta name="title" content="Zaxan | Awesomely Friendly Accounting" />
+
+  <meta property="og:url" content="http://www.zaxan.com">
+  <meta property="og:title" content="Zaxan Awesomely Friendly Accounting">
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="http://www.zaxan.com/zaxan-large.jpg">
+  <meta property="og:description" content="Zaxan is an awesomely friendly application that helps friends split bills and keep track of what they owe each other after outings, movies, parties and beer sessions. It can also be used by roommates to keep track of their regular expenses." />
+  <meta property="fb:admins" content="1012617127" />
+  <meta property="fb:app_id" content="506383136084817" /> 
   <meta name="author" content="">
+
+  <link rel="image_src" type="image/jpg" href="http://zaxan.meteor.com/zaxan-large.jpg" />
 
   <!-- Styles -->
   <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -72,8 +83,24 @@
     });
   </script>
 
+  <script>
+    (function(i,s,o,g,r,a,m){
+      i['GoogleAnalyticsObject']=r;
+      i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();
+        a=s.createElement(o),m=s.getElementsByTagName(o)[0];
+        a.async=1;
+        a.src=g;
+        m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-40640039-1', 'zaxan.com');
+    ga('send', 'pageview');
+  
+  </script>
+
+
   <!-- Icons -->
-  <link rel="shortcut icon" href="ico/favicon.ico">
+  <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
